<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.guet.jjhome.indexsp.activity.CreateMessageActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/message_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/abc_action_bar_up_description"
        android:background="?attr/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <github.chenupt.dragtoplayout.DragTopLayout
        app:dtlOpen="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--top view-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_message_option"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerUrgency"
                    android:hint="@string/hint_message_urgency"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerImportant"
                    android:hint="@string/hint_message_important"
                    android:layout_weight="1" />
            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerLimit"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:hint="@string/hint_message_limit" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerTrace"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:hint="@string/hint_message_trace" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hint_message_directions"
                android:id="@+id/textView2"
                android:clickable="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="教务"
                    android:id="@+id/checkBox1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="科研"
                    android:id="@+id/checkBox2" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="学工"
                    android:id="@+id/checkBox3" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="党政"
                    android:id="@+id/checkBox4" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="工会"
                    android:id="@+id/checkBox5" />
            </LinearLayout>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_message_sms"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/switchSms"
                android:checked="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/ic_arrow_drop_up_white_24dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <!--content view-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_message_to"
                    android:id="@+id/textView4" />

                <edu.guet.jjhome.indexsp.view.ContactsCompletionView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </edu.guet.jjhome.indexsp.view.ContactsCompletionView>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTitle"
                android:imeOptions="actionUnspecified"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/txtAppTitle"
                android:layout_toEndOf="@+id/txtAppTitle"
                android:hint="@string/hint_message_title" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editContent"
                android:imeOptions="actionUnspecified"
                android:hint="@string/hint_message_content"
                android:lines="5"
            android:gravity="top" />
        </LinearLayout>

    </github.chenupt.dragtoplayout.DragTopLayout>

</LinearLayout>
